<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Options System -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Title ActioBar -->
    <string name="app_name">Gestión Juagdores</string>

    <!-- Button show_screen_players -->
    <string name="show_screen_players">Mostar Jugadores</string>

    <!-- menu settings -->
    <string name="preferencies">Preferencias</string>
    <string name="management_players">Gestión de Jugadores</string>
    <string name="load_players">Cargar Jugadores</string>
    <string name="delete_players">Eliminar Jugadores</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_load_players">Cargar Jugadores</string>
    <string name="title_activity_delete_players">Eliminar Jugadores</string>
    <string name="title_activity_preferences_user">Preferencias usuario</string>
    <string name="title_activity_edition_player">EditionPlayerActivity</string>
    
    <!-- edition_player.xml -->
    <string name="txt_edition">Edición</string>
    <string name="txt_code_player">CODJUG</string>
    <string name="for_retire">Para Jubilar</string>
    <string name="age_player">Edad</string>
    <string name="edit_text_age">edad</string>
    
    <!-- activity edition players -->
    <string name="btn_save_changes_players">Guardar datos</string>

</resources>